# Attention-Allocation-System

./: Dockerfile  README.md  app.py  dqn_model.pth  gradio_app.py  inference.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt  rewards.npy
agents/: baseline_agent.py  dqn_agent.py  greedy_agent.py  hybrid_agent.py  q_learning_agent.py
env/: environment.py  models.py  tasks.py
scripts/: evaluate.py  plot_results.py  run_single_episode.py  train_dqn.py  train_q_learning.py  validate-submission.sh
server/: app.py
tests/: test_env.py
youtube-rl/: README.md  angular.json  package-lock.json  package.json  tsconfig.spec.json
youtube-rl/src/: index.html
youtube-rl/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.spec.ts  app.ts
youtube-rl/src/app/analytics/: analytics.css  analytics.html  analytics.ts
youtube-rl/src/app/core/services/: recommendation.ts
youtube-rl/src/app/home/: home.component.css  home.component.html  home.component.ts
youtube-rl/src/app/pages/analytics/: analytics.css  analytics.html  analytics.spec.ts  analytics.ts
youtube-rl/src/app/video-card/: video-card.component.css  video-card.component.html  video-card.component.spec.ts  video-card.component.ts
youtube-rl/src/app/video-player/: video-player.component.spec.ts  video-player.component.ts
