[project]
name = "attention-allocation-system"
version = "1.0.0"
description = "Content recommendation RL environment built with OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"